test/types/sync/ferguson/sync-coerce-instantiate2.good
sync-coerce-instantiate2.chpl:8: error: unresolved call 'f(sync e)'
sync-coerce-instantiate2.chpl:1: note: this candidate did not match: f(x: enum)
sync-coerce-instantiate2.chpl:8: note: because call actual argument #1 with type sync e
sync-coerce-instantiate2.chpl:1: note: is passed to formal 'x: e'
sync-coerce-instantiate2.chpl:15: error: unresolved call 'g(single int(64))'
sync-coerce-instantiate2.chpl:10: note: this candidate did not match: g(x: integral)
sync-coerce-instantiate2.chpl:15: note: because call actual argument #1 with type single int(64)
sync-coerce-instantiate2.chpl:10: note: is passed to formal 'x: int(64)'
